fixed overlapping in header in desktop

--- a/source/less/blocks/bill.less
+++ b/source/less/blocks/bill.less
@@ -36,6 +36,8 @@
 @media (min-width: @desktop-width) {
   .bill {
     width: 484px;
+    position: relative;
+    z-index: 100;
   }
 
   .bill__link {
